			irker history 

2.19: 2020-06-29
  Codebase is now fully forward-poerted to Python 3.

2.18: 2016-06-02 
  Add the ability to set the notification-message template (Debian bug #824512)

2.17: 2016-03-14
  Add a reconnect delay (Debian bug #749650).
  Add proxy support (requres setting some variables in the source file).
  Use git abbreviated hash to address Debian complaints.

2.16: 2016-02-18
  Code now runs under either Python 2 or Python 3

2.15: 2016-01-12
  Emergency backout of getaddrinfo, it randomly hangs.

2.14: 2016-01-12
  Lookup with getaddrinfo allows use with IPv6.
  Documentation improvements.

2.13: 2015-06-14
  SSL validation fix.
  Hardening against Unicode decode errors.
  irk becomes a library so it can be re-used.

2.12: 2014-10-22
  Catch erroneous UTF-8 or non-UTF-8 from servers.
  Also autodetect the right logging device under FreeBSD: /var/run/syslog

2.11: 2014-06-20
  With -i, message string argument now optional, stdin is read if it is absent.
  Auto-adapt to BSD & OS X log device as well as Linux's.

2.10: 2014-06-19
  irk no longer fails on ircs channel URLs.

2.9: 2014-06-01
  If irkerd is running in background, log to /dev/syslog (facility daemon).
  New -H option to set host listening address.
  Add support for using CertFP to auth to the IRC server, and document it.

2.8: 2014-05-30
  Various minor improvements to irk.
  Cope better with branch names containing slashes.

2.7: 2014-03-15
  Add support for ircs:// and SSL/TLS connections to IRC servers.
  Add support for per-URL usernames and passwords.

2.6: 2014-02-04
   Fix for an infinite loop on failing to connect to IRC

2.5: 2013-12-24
   Bug fix - remove a deadlock we inherited from irclib.

2.4: 2013-12-03
   Bug fix release - some users reported failure to connect with 2.3.
   Also prevent a crash if Unicode shows up in the wrong place.

2.3: 2013-11-30
  -i option enables immediate sending of one line in foreground.

2.2: 2013-11-29